# md2reqif

./: .gitignore  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/md2reqif/: __init__.py  cli.py  md_parser.py  md_writer.py  model.py  reqif_reader.py  reqif_writer.py  web.py
src/md2reqif/templates/: index.html
tests/: conftest.py  test_md_parser.py  test_reqif_writer.py  test_round_trip.py  test_web_ui.py
tests/fixtures/: full.md  simple.md
